kubernetes/booking-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-api
  template:
    metadata:
      labels:
        app: booking-api
    spec:
      containers:
      - name: booking-api
        image: 969318514380.dkr.ecr.ap-south-1.amazonaws.com/booking-api:latest
        ports:
        - containerPort: 8000
