kubernetes/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
    version: v6    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        version: v6
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: wordpress
          image: 969318514380.dkr.ecr.ap-south-1.amazonaws.com/rajiv-wordpress:fixed
          ports:
            - containerPort: 80
