kubernetes/booking-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-api-service
spec:
  selector:
    app: booking-api
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
