kubernetes/photo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-api-service
spec:
  selector:
    app: photo-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
