kubernetes/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-alb-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:969318514380:certificate/4c0e7183-fe06-4abe-b449-e493e3872ecd
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-02fbea331eb7857fe,subnet-08766cb40136cece2,subnet-0a303e1ed28f25358
spec:
  ingressClassName: alb
  rules:
    - host: snehaldigitalphoto.com
      http:
        paths:
          - path: /bookings
            pathType: Prefix
            backend:
              service:
                name: booking-api-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
